--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -67,8 +67,8 @@ jobs:
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
-        
-    - name: Openclash
+             
+    - name: OpenClash
       run: |
           mkdir package/luci-app-openclash
           cd package/luci-app-openclash
@@ -76,8 +76,8 @@ jobs:
           git remote add -f origin https://github.com/vernesong/OpenClash.git
           git config core.sparsecheckout true
           echo "luci-app-openclash" >> .git/info/sparse-checkout
-          git pull --depth 1 origin master
-          git branch --set-upstream-to=origin/master master
+          git pull origin master
+          git branch --set-upstream-to=origin/master master 
 
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
